[package]
name = "flux"
version = "0.1.0"
edition = "2021"
description = "A high-throughput blockchain for consumer applications"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.0"
ed25519-dalek = "1.0.1"
rand = "0.7"
rand_core = { version = "0.6", features = ["getrandom"] }
log = "0.4"
env_logger = "0.9"
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns","floodsub"] }
futures = "0.3"
void = "1.0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "flux_benchmark"
harness = false